:zap: 根据sonar优化代码